# dimer-generator

./: CMakeLists.txt  README.md  chemicalitem.cpp  chemicalitem.h  chemicalitem.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  molecule.cpp  molecule.h  reaction.cpp  reaction.h  reactiondialog.cpp  reactiondialog.h  reactiondialog.ui  reactiongenerator.cpp  reactiongenerator.h
res/: QtResources.qrc
